<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Main">

    <item android:id="@+id/action_search"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"
        android:actionLayout="@layout/actionbar_search_layout"
        android:icon="@android:drawable/ic_menu_search"/>

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
         app:showAsAction="never" />
    <item android:id="@+id/action_pause" android:title="Pause"
        android:icon="@android:drawable/ic_media_pause"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_play" android:title="@string/action_play"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="ifRoom" android:visible="false"/>
    <item android:id="@+id/action_next" android:title="@string/action_next"
        android:icon="@android:drawable/ic_media_next"
        app:showAsAction="never" />



</menu>
